rpi5/blocky/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blocky
  labels:
    app: blocky
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 3
  strategy:
    rollingUpdate:
      maxUnavailable: 75%
      maxSurge: 100%
  selector:
    matchLabels:
      app: blocky
  template:
    metadata:
      name: blocky
      labels:
        app: blocky
    spec:
      containers:
        - name: blocky
          image: ghcr.io/0xerr0r/blocky:v0.35.0@sha256:4f165b63db0d76c96ecc47c7a8f57caeedc003a912bdce29abb0e283ce02e16b
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 53
              protocol: TCP
              name: dns-tcp
            - containerPort: 53
              protocol: UDP
              name: dns-udp
            - containerPort: 4000
              protocol: TCP
              name: http
          volumeMounts:
            - mountPath: /app/config.yml
              name: config
              subPath: config.yml
            - mountPath: /creds
              name: dbcreds
            - mountPath: /etc/ssl/certs/ca-certificates.crt
              name: ca
              subPath: ca.crt
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 192Mi
          readinessProbe:
            exec:
              command:
                - /app/blocky
                - healthcheck
            initialDelaySeconds: 30
          livenessProbe:
            exec:
              command:
                - /app/blocky
                - healthcheck
            initialDelaySeconds: 60
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
      restartPolicy: Always
      volumes:
        - name: config
          configMap:
            name: config
        - name: dbcreds
          secret:
            secretName: database-credentials
        - name: ca
          configMap:
            name: anshulg-ca
      dnsPolicy: None
      dnsConfig:
        nameservers:
          - 10.43.0.11
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                topologyKey: "kubernetes.io/hostname"
                labelSelector:
                  matchLabels:
                    app: blocky
              weight: 100
