rpi5/blocky/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blocky
spec:
  clusterIP: 10.43.0.12
  selector:
    app: blocky
  ports:
    - protocol: TCP
      port: 53
      targetPort: dns-tcp
      name: dns-tcp
    - protocol: UDP
      port: 53
      targetPort: dns-udp
      name: dns-udp
    - protocol: TCP
      port: 80
      targetPort: http
      name: http
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: blocky-dns-udp
spec:
  type: LoadBalancer
  ports:
    - name: dns-udp
      port: 53
      protocol: UDP
      targetPort: dns-udp
  selector:
    app: blocky
---
apiVersion: v1
kind: Service
metadata:
  name: blocky-dns-tcp
spec:
  type: LoadBalancer
  ports:
    - name: dns-tcp
      port: 53
      protocol: TCP
      targetPort: dns-tcp
  selector:
    app: blocky
