rpi5/blocky/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: blocky
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.1.100
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`blocky.local`) || Host(`blocky.internal`)
      middlewares:
        - name: security-headers
          namespace: kube-system
      services:
        - name: blocky
          port: 80
    - kind: Rule
      match: Host(`dashboard.blocky.local`) || Host(`dashboard.blocky.internal`)
      middlewares:
        - name: security-headers
          namespace: kube-system
      services:
        - name: grafana
          port: 80
  tls:
    secretName: blocky-cert-tls
    domains:
      - main: blocky.local
        sans:
          - blocky.internal
          - dashboard.blocky.local
          - dashboard.blocky.internal
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blocky
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: blocky
      port:
        number: 80
  tls:
    - hosts:
        - blocky
